samples/_failures_safe/1761042419_159202_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52cd97b4.c: In function ‘main’:
./samples/SAFE/__tmp_52cd97b4.c:139:15: error: expected ‘;’ at end of input
  139 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_52cd97b4.c:139:9: error: expected declaration or statement at end of input
  139 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_52cd97b4.c:139:9: error: expected declaration or statement at end of input
